# fastapi-blog-best-practices

./: .dockerignore  .env.local  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
alembic/: env.py
alembic/versions/: 90137c82a647_create_tables.py
docker/local/: docker-compose.yml
locales/: messages.pot
locales/az/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
nginx/conf.d/: default.conf
requirements/: base.txt  local.txt
src/: healthcheck.py  main.py
src/auth/: admin.py  dependencies.py  fastapi_users.py  manager.py  oauth2.py
src/auth/api/: router.py
src/auth/web/: router.py
src/blogs/: admin.py  models.py
src/blogs/api/: router.py
src/blogs/web/: router.py
src/common/: dependencies.py  enums.py  exceptions.py  models.py  patches.py  templates.py
src/common/admin/: application.py  file_upload.py  (+1 more)
src/core/: config.py  database.py  logging.py  path_conf.py  registrar.py  storage.py
src/essentials/: admin.py  models.py
src/users/: admin.py  dependencies.py  models.py
templates/emails/: base_email.html  reset_password.html  verify_email.html
templates/frontend/: 404.html  about.html  base.html  blog-details.html  blogs.html  contact.html  forgot-password.html  index.html  login.html  oauth-callback.html  profile.html  reset-password.html  signup.html  verify-email.html  verify.html
templates/sqladmin/: create.html  details.html  edit.html  index.html  layout.html  list.html  login.html
(+34 files in other folders)
